--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>TraderPy</title>
 </head>
 <body>
-    
+    <div class="header">
+            <a href="" class="header-left">TraderPy</a>
+            <div class="header-right">
+              <a href="">Contact</a>
+            </div>
+          </div> 
+    </div>
+
 </body>
 </html>
