--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <a href="">Contact</a>
             </div>
           </div> 
-    </div>
+  <div class="sidenav">side</div>
 
 </body>
 </html>
