added introduction and installation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
             </div>
           </div> 
   <div class="sidenav">side</div>
+<div class="main">
+  <article>
+  <h2>TraderPy</h2>
+  <p>TraderPy is an open-source modular algorithmic trading platform. Through the use of interchangable modules it can take control of your TD Ameritrade portfolio. This Program uses the TD Ameritrade api to get real time market data and control a TD Ameritrade trading account.</p>
+  </article>
+  <h2>Installation</h2>
+  <p>
+   1. In the command line clone this repository
 
+   2. CD into the repository
+
+   3. Install the application
+
+   4. To use this application you need to sign up for a TD Ameritrade developer account. This can be done here. 
+
+   5. Once an account has been created, you will need to create an application here to be approved for the api. 
+
+   6. This project uses a python library called selenium. It is used to for web scraping and is essentail for some of the methods to work. This library requires a chrome driver to be installed on your machine and the path to the executable needs to be included in the config file. This needs to be the absolute path not the relative one (Google will tell you how to find this if you don't know). The resources directory has an folder waiting for you to install the chrome driver into it. Replace the sample driver with your newly installed version.
+  
+   7. Finally make a copy of the sample config file and name it config.py. Fill out the required information (indicated in all caps text) 
+
+   8. To run this project open up your command line and go to the root directory of this project. Once in the root directory just type
+
+  </p>
+  
+</div>
 </body>
 </html>
