added command snippets to installation

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <h2>Installation</h2>
   <span >
    1. In the command line clone this repository</br>
-
+    <div class="command-snippet">git clone https://github.com/SamGulinello/TraderPY</div>
    2. CD into the repository</br>
-
+    <div class="command-snippet">cd TraderPy</div>
    3. Install the application</br>
-
+    <div class="command-snippet">pip3 install -r requirements.txt</div>
    4. To use this application you need to sign up for a TD Ameritrade developer account. This can be done here.</br> 
         <ul>
           <li>This is seperate from your actual TD Ameritrade trading account.</li>
@@ -61,7 +61,7 @@
         </ul>
 
    8. To run this project open up your command line and go to the root directory of this project. Once in the root directory just type</br>
-
+    <div class="command-snippet">python3 main.py</div>     
   </span>
   </article>
 </div>
