--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <div class="command-snippet">pip3 install -r requirements.txt</div>
    4. To use this application you need to sign up for a TD Ameritrade developer account. This can be done <a href ="https://developer.tdameritrade.com/">here.</a></br> 
         <ul>
-          <li>This is seperate from your actual TD Ameritrade trading account.</li>
-          <li>To set up a Trading account, if you don't already have one, go to their <a href = "https://www.tdameritrade.com/">official website</a></li>
+          <li class="white-circle">This is seperate from your actual TD Ameritrade trading account.</li>
+          <li class="white-circle">To set up a Trading account, if you don't already have one, go to their <a href = "https://www.tdameritrade.com/">official website</a></li>
         </ul>
 
    5. Once an account has been created, you will need to create an application <a href =" https://developer.tdameritrade.com/user/me/apps/add">here</a> to be approved for the api. </br>
         <ul>
-          <li>Fill out the required fields in the Add App screen. Select Create App.</li>
-          <li>Field details are as follows: 
-            <li>App Name: A unique application name.</li>
-            <li>Callback URL: The URL to receive the auth code (used to retrieve a token from the Authentication API) after successful authentication. Separate URLs with a comma for multiple URLs. Localhost can be used here, as well.</li>
-            <li>What is the purpose of your application?: Use cases of the application, trading strategy, number of orders sent per day, etc.</li>
-            <li>The new application will be displayed in <a href= "https://developer.tdameritrade.com/user/me/apps">My Apps</a> once it is successfully registered</li>
-            <li>For more information on this process, they provide good <a href = "https://developer.tdameritrade.com/guides">guides.</a></li>
+          <li class="white-circle">Fill out the required fields in the Add App screen. Select Create App.</li>
+          <li class=white-circle>Field details are as follows: 
+            <li class="list-indent">App Name: A unique application name.</li>
+            <li class="list-indent">Callback URL: The URL to receive the auth code (used to retrieve a token from the Authentication API) after successful authentication. Separate URLs with a comma for multiple URLs. Localhost can be used here, as well.</li>
+            <li class="list-indent">What is the purpose of your application?: Use cases of the application, trading strategy, number of orders sent per day, etc.</li>
+            <li class="white-circle">The new application will be displayed in <a href= "https://developer.tdameritrade.com/user/me/apps">My Apps</a> once it is successfully registered</li>
+            <li class="white-circle">For more information on this process, they provide good <a href = "https://developer.tdameritrade.com/guides">guides.</a></li>
           </li>
         </ul>
 
@@ -51,13 +51,13 @@
   
    7. Finally make a copy of the sample config file and name it config.py. Fill out the required information (indicated in all caps text) </br>
         <ul>
-          <li>Required information is as follows: </li>
-          <li>client_id: This is the Consumer Key of the successfully registered app on your TD Ameritrade developer account</li>
-          <li>account_number: This can be found in the My Profile page on TD Ameritrades Trading Website</li>
-          <li>username: This is your TD Ameritrade Trading Account Username</li>
-          <li>password: This is your TD Ameritrade Trading Account Password</li>
-          <li>chrome_driver: This is the absolute path to the chrome driver executable</li>
-          <li>security_questions: The answers would have been determined when setting up the TD Ameritrade account.</li>
+          <li class="white-circle">Required information is as follows: </li>
+          <li class="list-indent">client_id: This is the Consumer Key of the successfully registered app on your TD Ameritrade developer account</li>
+          <li class="list-indent">account_number: This can be found in the My Profile page on TD Ameritrades Trading Website</li>
+          <li class="list-indent">username: This is your TD Ameritrade Trading Account Username</li>
+          <li class="list-indent">password: This is your TD Ameritrade Trading Account Password</li>
+          <li class="list-indent">chrome_driver: This is the absolute path to the chrome driver executable</li>
+          <li class="list-indent">security_questions: The answers would have been determined when setting up the TD Ameritrade account.</li>
         </ul>
 
    8. To run this project open up your command line and go to the root directory of this project. Once in the root directory just type</br>
