--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
               <a href="">Contact</a>
             </div>
           </div> 
-  <div class="sidenav">side</div>
+  <div class="sidenav">
+    <ul>
+      <a href class="navItems">Stock Class</a>
+      <a href class="navItems">TD Class</a>
+    </ul>
+  </div>
 <div class="main">
   <article class="traderpy">
   <h2>TraderPy</h2>
