created stock and TD html pages

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="header">
-            <a href="" class="header-left">TraderPy</a>
+            <a href="./index.html" class="header-left">TraderPy</a>
             <div class="header-right">
               <a href="">Contact</a>
             </div>
           </div> 
   <div class="sidenav">
     <ul>
-      <a href class="navItems">Stock Class</a>
-      <a href class="navItems">TD Class</a>
+      <a href="./html/Stock_Class.html" class="navItems">Stock Class</a>
+      <a href="./html/TD_Class.html" class="navItems">TD Class</a>
     </ul>
   </div>
 <div class="main">
