--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <div class="command-snippet">python3 main.py</div>     
   </span>
   </article>
-  <article class="Contribute">
+  <article class="contribute">
     <h2>Contribute</h2>
     <p>This project is still very early in development and I am currently seeking contributors. 
       If you wish to contribute please fork the repository and make any changes to the code. Afterwards submit a pull request and I will review it. If you believe something is missing or done incorrectly feel free to change it and explain why. This project has always been a learning excersise for me and I continue to keep it as that.</p>
   </article>
-  <article class="Creating a module">
+  <article class="creatingaModule">
     <h2>Creating a Module</h2>
     <p>
       To create a module you will first want to import the config file. The main function of this program sets the root directory to make an import of the config file look like this.
@@ -99,22 +99,22 @@
 
     </p>
   </article>
-  <article class=" What's Next">
+  <article class=" what'sNext">
     <h2>What's Next</h2>
     <p>The next deployment should include a few new things. First, I would like to add more methods to both the TD and Stock classes. The TD api has a lot to offer but the request system can be confusing at times. 
       I would like to have these classes make getting data from TD Ameritrade as easy as possible. Next, I plan on documenting both those classes. There are already a number of cool things they can do but there is no way of knowing it without looking at the code. Documentation will either come in the form of another README or I have toyed with the idea of making a documentation website to accompany this project (will probably start with a README). Finally, I hope to develop a 'trailing stop' module. This will ensure the program doesn't hold a stock until the bitter end and will instead lock in a loss percentage value that will change as the stock hopefully goes up in value.</p>
   </article>
-  <article class="Support">
+  <article class="support">
     <h2>Support</h2>
     <p>If you have any question or feedback please let me know. You can contact me at <span class="email">sgulinello12@gmail.com</span>. 
       I will try my best to respond promptly. I hope to contribute to this project regularly because there is so much I would like to do with it. I am a full time college student so I can't promise anything.</p>
   </article>
-  <article class="Sponsorship">
+  <article class="sponsorship">
     <h2>Sponsorship</h2>
     <p>If you have a specific requirement or function you would like to see implemented,
        I am open to a sponsorship. This project has been working at my pace and I have been adding functionality where I see best fit. I have roadmap to continue to grow this project but I am open to reprioritizing things for a small financial contribution. Reach out to me if interested.</p>
   </article>
-  <article class="Legal Things">
+  <article class="legalThings">
     <h2>Legal Things</h2>
     <p>I just want it on record that I am not personally responsible for the funds in your trading account. What you do with your money is completely seperate from the programs I write. This project is honestly just an exercise in a lot of programming practices I wanted to learn more about. This should in no way be your primary decision maker with large quantities of your financials. I also assume bugs will occur as they have before when developing this. 
       I try to program in safe guards though that will protect your funds. Also please be aware of any personal information you use with this. <b>When pushing something to githup please add your specific config file to a .gitignore.</b> That file with contain sensitive information which I am assuming you don't want on the internet. Thank you and enjoy :)</p>
