added main sections for td_class

--- a/html/TD_Class.html
+++ b/html/TD_Class.html
@@ -20,5 +20,28 @@
   <a href="./TD_Class.html" class="navItems">TD Class</a>
 </ul>
 </div>
+
+<div class="main">
+    <article class="tdAmeritrade">
+    <h2>TD Ameritrade API</h2>
+    <p>This class is what interacts with the TD Ameritrade API. It's main tool is the 'Requests' library since the API is designed to retrieve HTTP requests and return the data in the form of JSON. Below are all the methods and attributes that can be used with this class. If you feel like some functionality is missing, please reach out. This class and documentation will be added too continuously as development continues.</p>
+    </article>
+    <article class="tdMethods">
+    <h2>Methods</h2>
+    <h3>Authorize Your Account</h3>
+    <h3>Get Account Data</h3>
+    <h3>Get Current Positions</h3>
+    <h3>Get Account ID</h3>
+    <h3>Get Current Buying Power</h3>
+    <h3>Get Current Account Value</h3>
+    <h3>Get Data on a Specific Position Held in Your Portfolio</h3>
+    </article>
+    <article class="tdAttributes">
+      <h2>Attributes</h2>
+    </article>
+    <article class="tdExamplescript">
+      <h2>Example Script</h2>
+    </article>
+</div>
 </body>
 </html>
